zr_vm_rust_binding/include/zr_vm_rust_binding.h

typedef enum EZrRustBindingStatus {
    ZR_RUST_BINDING_STATUS_OK = 0,
    ZR_RUST_BINDING_STATUS_INVALID_ARGUMENT = 1,
    ZR_RUST_BINDING_STATUS_IO_ERROR = 2,
    ZR_RUST_BINDING_STATUS_NOT_FOUND = 3,
    ZR_RUST_BINDING_STATUS_ALREADY_EXISTS = 4,
    ZR_RUST_BINDING_STATUS_BUFFER_TOO_SMALL = 5,
    ZR_RUST_BINDING_STATUS_COMPILE_ERROR = 6,
    ZR_RUST_BINDING_STATUS_RUNTIME_ERROR = 7,
    ZR_RUST_BINDING_STATUS_UNSUPPORTED = 8,
    ZR_RUST_BINDING_STATUS_INTERNAL_ERROR = 9
} ZrRustBindingStatus;
typedef struct ZrRustBindingNativeCallContext ZrRustBindingNativeCallContext;
typedef struct ZrRustBindingValue ZrRustBindingValue;
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_NativeCallContext_GetModuleName(
        const ZrRustBindingNativeCallContext *context,
        TZrChar *buffer,
        TZrSize bufferSize);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_NativeCallContext_GetTypeName(
        const ZrRustBindingNativeCallContext *context,
        TZrChar *buffer,
        TZrSize bufferSize);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_NativeCallContext_GetCallableName(
        const ZrRustBindingNativeCallContext *context,
        TZrChar *buffer,
        TZrSize bufferSize);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_NativeCallContext_GetArgumentCount(
        const ZrRustBindingNativeCallContext *context,
        TZrSize *outArgumentCount);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_NativeCallContext_CheckArity(
        const ZrRustBindingNativeCallContext *context,
        TZrSize minArgumentCount,
        TZrSize maxArgumentCount);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_NativeCallContext_GetArgument(
        const ZrRustBindingNativeCallContext *context,
        TZrSize index,
        ZrRustBindingValue **outArgumentValue);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_NativeCallContext_GetSelf(
        const ZrRustBindingNativeCallContext *context,
        ZrRustBindingValue **outSelfValue);