zr_vm_rust_binding/rust/zr_vm_rust_binding_sys/src/native.rs


    pub fn ZrRustBinding_NativeCallContext_GetModuleName(
        context: *const ZrRustBindingNativeCallContext,
        buffer: *mut c_char,
        bufferSize: TZrSize,
    ) -> ZrRustBindingStatus;
    pub fn ZrRustBinding_NativeCallContext_GetTypeName(
        context: *const ZrRustBindingNativeCallContext,
        buffer: *mut c_char,
        bufferSize: TZrSize,
    ) -> ZrRustBindingStatus;
    pub fn ZrRustBinding_NativeCallContext_GetCallableName(
        context: *const ZrRustBindingNativeCallContext,
        buffer: *mut c_char,
        bufferSize: TZrSize,
    ) -> ZrRustBindingStatus;
    pub fn ZrRustBinding_NativeCallContext_GetArgumentCount(
        context: *const ZrRustBindingNativeCallContext,
        outArgumentCount: *mut TZrSize,
    ) -> ZrRustBindingStatus;
    pub fn ZrRustBinding_NativeCallContext_CheckArity(
        context: *const ZrRustBindingNativeCallContext,
        minArgumentCount: TZrSize,
        maxArgumentCount: TZrSize,
    ) -> ZrRustBindingStatus;
    pub fn ZrRustBinding_NativeCallContext_GetArgument(
        context: *const ZrRustBindingNativeCallContext,
        index: TZrSize,
        outArgumentValue: *mut *mut ZrRustBindingValue,
    ) -> ZrRustBindingStatus;
    pub fn ZrRustBinding_NativeCallContext_GetSelf(
        context: *const ZrRustBindingNativeCallContext,
        outSelfValue: *mut *mut ZrRustBindingValue,
    ) -> ZrRustBindingStatus;
}
